--- a/index.html
+++ b/index.html
@@ -1231,17 +1231,14 @@
                 }
             });
 
-// ▼ 選択内容更新（希望日時の表示を整形）
-const selectedDates = selectedCellList.map((item, index) => {
-    const date = new Date(item.date);
-    const formatted = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
-    const label = ['第一希望', '第二希望', '第三希望'][index] || `第${index + 1}希望`;
-    return `・${label}：${formatted}`;
-});
+            // 選択内容更新
+            const selectedDates = selectedCellList.map(item => {
+                const date = new Date(item.date);
+                return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
+            });
 
-selectedFullDate = selectedDates; // ← 改行区切りではなく配列で保持
-updateDisplayInfo();
-
+            selectedFullDate = selectedDates.join('\n');
+            updateDisplayInfo();
         }
 
         function submitForm() {
@@ -1279,7 +1276,7 @@ updateDisplayInfo();
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0].join('\n')}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
