--- a/index.html
+++ b/index.html
@@ -1231,14 +1231,16 @@
                 }
             });
 
-            // 選択内容更新
-            const selectedDates = selectedCellList.map(item => {
-                const date = new Date(item.date);
-                return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
-            });
+// 選択内容更新
+const selectedDates = selectedCellList.map((item, index) => {
+    const date = new Date(item.date);
+    const formatted = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
+    const label = ['第一希望', '第二希望', '第三希望'][index] || `第${index + 1}希望`;
+    return `・${label}：${formatted}`;
+});
 
-            selectedFullDate = selectedDates.join('\n');
-            updateDisplayInfo();
+selectedFullDate = selectedDates.join('\n');
+updateDisplayInfo();
         }
 
         function submitForm() {
