--- a/index.html
+++ b/index.html
@@ -957,9 +957,9 @@
                     pairs.push(`${parts[i]} ${parts[i + 1]}`);
                 }
 
-                selectedDateText = `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>` +
+                selectedDateText = `` +
                     pairs.map((datetime, index) =>
-                        `・${hopeLabels[index] || `第${index + 1}希望`}：${datetime}`
+                        `${datetime}`
                     ).join('<br>');
             }
             // 修正ボタン付きのHTMLを作成
