--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@ const selectedDates = selectedCellList.map((item, index) => {
     const date = new Date(item.date);
     const formatted = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
     const label = ['第一希望', '第二希望', '第三希望'][index] || `第${index + 1}希望`;
-    return `・${label}：${formatted}`;
+    return `≪${label}≫\n${formatted}`;
 });
 
 selectedFullDate = selectedDates.join('\n');
