--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                     pairs.push(`${parts[i]} ${parts[i + 1]}`);
                 }
 
-                selectedDateText = `` +
+                selectedDateText = `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>` +
                     pairs.map((datetime, index) =>
                         `${datetime}`
                     ).join('<br>');
@@ -1234,7 +1234,7 @@
 // 選択内容更新
 const selectedDates = selectedCellList.map((item, index) => {
     const date = new Date(item.date);
-    const formatted = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${item.time}`;
+    const formatted = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日${item.time}`;
     const label = ['第一希望', '第二希望', '第三希望'][index] || `第${index + 1}希望`;
     return `≪${label}≫\n${formatted}`;
 });
